WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156879
Fix the iOS build: WAKView may not respond to drawLayer:inContext:
https://bugs.webkit.org/show_bug.cgi?id=156879
Summary
Fix the iOS build: WAKView may not respond to drawLayer:inContext:
Tim Horton
Reported
2016-04-21 16:27:23 PDT
Fix the iOS build: WAKView may not respond to drawLayer:inContext:
Attachments
Patch
(1.54 KB, patch)
2016-04-21 16:33 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-04-21 16:33:11 PDT
Created
attachment 276979
[details]
Patch
Tim Horton
Comment 2
2016-04-21 16:33:29 PDT
rdar://problem/25772661
WebKit Commit Bot
Comment 3
2016-04-21 17:27:05 PDT
Comment on
attachment 276979
[details]
Patch Clearing flags on attachment: 276979 Committed
r199850
: <
http://trac.webkit.org/changeset/199850
>
WebKit Commit Bot
Comment 4
2016-04-21 17:27:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug