Fix the iOS build: WAKView may not respond to drawLayer:inContext: https://bugs.webkit.org/show_bug.cgi?id=156879 <rdar://problem/25772661>

Reviewed by Beth Dakin.

* WebView/WebHTMLView.mm:
WebHTMLView on iOS never uses drawLayer:inContext:, and WAKView
doesn't implement it, so this would have thrown an exception
if called, anyway. Fix the build with stricter CA protocols.


Canonical link: https://commits.webkit.org/174985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199850 268f45cc-cd09-0410-ab3c-d52691b4dbfc